ignoring all makefile installed plugin directories

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ static
 /c/lib/regenerate-thumbnails
 /c/lib/adminer
 /c/lib/wordpress-importer
+/c/lib/advanced-custom-fields
+/c/lib/webriti-smtp-mail
+/c/lib/buddypress
+/c/lib/wordpress-mu-domain-mapping
+/c/lib/logout-redirect
+/c/lib/buddypress-xprofile-image-field
+
+/c/themes/bitcoinfoundation.org-wb
+
