changed .gitignore to include wp-email-login plugin

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ static
 /c/lib/wordpress-mu-domain-mapping
 /c/lib/logout-redirect
 /c/lib/buddypress-xprofile-image-field
-
+/c/lib/wp-email-login
 /c/themes/bitcoinfoundation.org-wb
 .gitmodules
