added timber-library to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,6 @@ static
 /c/lib/logout-redirect
 /c/lib/buddypress-xprofile-image-field
 /c/lib/wp-email-login
+/c/lib/timber-library
 /c/themes/bitcoinfoundation.org-wb
+
